--- a/package.json
+++ b/package.json
@@ -17,9 +17,14 @@
   },
   "homepage": "https://github.com/IsshikiCode/express_01#readme",
   "dependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^22.1.0",
     "express": "^4.19.2",
     "memory-cache": "^0.2.0",
-    "mongoose": "^8.5.2",
+    "mongodb": "^6.8.0",
+    "mongoose": "^8.5.2"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.4"
   }
 }
